Bomb animation completed + earthquake effect added + image smoothing on all instance of draw

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -16,11 +16,16 @@
         display: flex;
         justify-content: start;
         align-items: start;
+
+        width: 100vw;
+        height: 100vh;
+
+        background-color: #3e3750;
       }
     </style>
   </head>
   <body>
-    <canvas></canvas>
+    <!-- <canvas></canvas> -->
     <script type="module" src="./Main.js"></script>
   </body>
 </html>
